<resources>
    <string name="Recording">Recording:</string>
    <string name="insert_sd_card">Insert SD card.</string>
    <string name="storage_is_full">Storage is full.</string>
    <string name="save_sd_card">Voice record file already save in SD card.</string>
    <string name="start_record_failed">Start call record failed.</string>
    <string name="menu_Record">Record</string>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">No network coverage</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_Smsreject">Sms reject</string>
    <string name="menuButtonHintSmsReject">Press Menu for Sms Rejecting.</string>
    <string name="unknown_number">Unknown number, reject the call without sending sms.</string>
    <string name="menuButtonHintCallOptions">Press Menu for call options.</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show dialpad</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="mobile_network_setting">Mobile Network Settings</string>
    <string name="title_data_settings">Data Settings</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="callind_multi_sim">Select Subscription</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="place_a_call1">Subscription 1</string>
    <string name="place_a_call2">Subscription 2</string>
    <string name="cancel_call">Cancel</string>
    <string name="pref_title_ip">IP dial</string>
    <string name="sum_ip">Set IP dialing number</string>
    <string name="pref_title_sd">Speed dial</string>
    <string name="sum_sd">Set speed dialing keys</string>
    <string name="barry_alloutgoing">All Outgoing</string>
    <string name="barry_outgoinginter">Outgoing International</string>
    <string name="barry_outgoingroaming">Outgoing Roaming</string>
    <string name="barry_allincoming">All Incoming</string>
    <string name="barry_incomeroaming">Income when Roaming</string>
    <string name="barry_cancelall">Deactive All</string>
    <string name="barry_changepassword">Change Password</string>
    <string name="set_auto_ums">Set SMS Reject</string>
    <string name="ums">Enter Message</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_number">Channel number</string>
    <string name="enable_number">Enable the channel</string>
    <string name="labelCellBroadcast">Cell broadcast settings</string>
    <string name="sum_cb_settings">Set cell broadcast channel and language</string>
    <string name="cb_title">Cell broadcast</string>
    <string name="cb_enabled_title">Cell broadcast</string>
    <string name="cb_enabled_summary">Enable/disable receipt of CB messages</string>
    <string name="cb_language_title">Language</string>
    <string name="cb_language_dialog_title">Select language</string>
    <string name="add_channel_title">Add channel</string>
    <string name="channel_list_title">Channel list</string>
    <string name="cell_cancel">Cancel</string>
    <string name="cell_save">Save</string>
    <string name="gprs_title">Enable always-on mobile data</string>
    <string name="gprs_summary">When this option is activated device consumes more power and generates more data traffic for automatic updates of aplications data</string>
    <string name="pref_title_plus_code">Plus Code Dialing Setting</string>
    <string name="sum_plus_code">Set Plus Code dialing number</string>
    <string name="labelCCFNRc">Forward when unreachable</string>
    <string name="messageCCFNRc">Number when unreachable</string>
    <string name="labelCFCA">Cancel All Forward</string>
    <string name="messageCFCA">Cancel All Forward</string>
    <string name="cnp">Caller number display</string>
    <string name="labelTelecomCFU">Always forward</string>
    <string name="labelTelecomCFB">Forward when busy</string>
    <string name="messageTelecomCFB">Number when busy</string>
    <string name="labelTelecomCFNRy">Forward when unanswered</string>
    <string name="messageTelecomCFNRy">Number when unanswered</string>
    <string name="network_manage_settings_1">SIM1 Network Settings</string>
    <string name="network_manage_settings_2">SIM2 Network Settings</string>
    <string name="sub_card_first_title">SIM1 Settings</string>
    <string name="sub_card_first_summary">Additional SIM1 only call settings</string>
    <string name="sub_card_second_title">SIM2 Settings</string>
    <string name="sub_card_second_summary">Additional SIM2 only call settings</string>
    <string name="telecom_smart_ip_dialing_title">Smart Ip dial</string>
    <string name="telecom_smart_ip_dialing_summary">Set Ip dial</string>
    <string name="telecom_location_of_number_title">Location of number</string>
    <string name="telecom_location_of_number_summary">Use location of phone number when dialing</string>
    <string name="telecom_area_code_title">Set own number or area code</string>
    <string name="telecom_area_code_summary">not set area code</string>
    <string name="dlg_title_telecom_area_code">Input own number or area code</string>
    <string name="telecom_set_ip_number_title">Set IP number</string>
    <string name="telecom_set_ip_number_summary">not set IP number</string>
    <string name="dlg_title_telecom_set_ip_number">Input IP number</string>
    <string name="telecom_smart_ip_dial_switch_title">Smart IP dial</string>
    <string name="telecom_smart_ip_dial_switch_summary_off">close smart IP dial</string>
</resources>